# codesight

./: .env.example  .gitignore  .gitlab-ci.yml  README.md  pyproject.toml  requirements.txt
config/: duo-agent.yaml  on-demand-request.json
scripts/: create_mr_example.py  post_comment_example.py  run_local_scan.py
src/codesight/: __init__.py  analysis_engine.py  config.py  gitlab_client.py  main.py  models.py  patch_utils.py  service.py
src/codesight/ai/: __init__.py  prompts.py  provider.py
src/codesight/scanners/: __init__.py  base.py  javascript_scanner.py  python_scanner.py  registry.py
tests/: test_python_scanner.py
